app/assets/stylesheets/style-main.css
/* ... */
.btn-primary:hover {
  background-color: hsl(163, 63%, 35%);
  border-color: hsl(163, 63%, 32%);
}
.btn-primary:focus, .btn-primary:active {
  background-color: hsl(163, 63%, 31%);
}
.btn.has-icon img {
  height: 12px;
  margin-left: 3px;
}



.game-name h3 {
  font-size: 28px;
}
.extra-info .title {
  font-size: 18px;
  color: hsl(163, 63%, 68%);
  margin-bottom: 10px;
}
.extra-info .btn a,
.extra-info .btn a:hover,
.extra-info .btn a:focus,
.extra-info .btn a:active {
  text-decoration: none;
  color: #fff;
}
h3.divider {
  margin-top: 40px;
  border-bottom: 1px solid hsl(163, 63%, 48%);
}
.section-heading {
  color: hsl(163, 63%, 86%);
  border-bottom: 1px solid hsl(163, 63%, 48%);
  padding-bottom: 6px;
  margin-bottom: 10px;
}
.section-heading .title { font-size: 22px; }
.section-heading .left { text-align: left; }
.section-heading .right {
  float: right;
  text-align: right;
  bottom: 0;
}
.subsection-heading, .pkg-contents-heading {
  font-size: 18px;
  color: hsl(163, 63%, 86%);
  padding: 10px 10px 5px 10px;
}
.price-list-heading {
  font-size: 18px;
  color: hsl(163, 63%, 68%);
  padding: 10px 10px 5px 10px;
}
.pkg-contents-heading {
  color: hsl(163, 63%, 86%);
}
.description h1,
.description-popup h1 {
  color: hsl(163, 63%, 68%);
  border-bottom: 1px solid rgba(221,221,221,0.5);
  font-size: 18px;
  margin-top: 10px;
}
.description h2,
.description-popup h2 {
  color: hsl(163, 63%, 68%);
  font-size: 18px;
}
.description h3,
.description h4,
.description h5,
.description h6,
.description-popup h3,
.description-popup h4,
.description-popup h5,
.description-popup h6 {
  color: hsl(163, 63%, 68%);
  font-size: 16px;
}
.reqs-container div > strong {
  color: hsl(163, 63%, 68%);
  font-size: 18px;
  font-weight: normal;
}

.pricing .game-entry:hover {
  background-color: hsla(163, 70%, 20%, 0.4);
  color: hsl(163, 63%, 68%);
}
.pricing .game-entry.selected:hover {
  color: #fff;
}
.pricing .game-entry.selected {
  background-color: rgba(255,255,255,0.18);
}

.video-container a > div:hover {
  background-color: hsla(163, 70%, 20%, 0.4);
}
.video-container a:hover {
  color: hsl(163, 63%, 68%);
}

.empty {
  color: #999;
  font-style: italic;
}



a {
  color: hsl(163, 63%, 43%);
}
a:hover {
  color: hsl(163, 63%, 35%);
}
a:focus {
  color: hsl(163, 63%, 31%);
}
.header {
  background-color: hsl(163, 55%, 25%);
}
.content, .footer {
  background-color: rgba(30,30,30,0.4);
}
.footer {
  background-color: rgba(30,30,30,0.7);
}



.twitter-typeahead,.tt-hint,.tt-input,.tt-dropdown-menu {
  vertical-align: middle;
  width: 100%;
  color: #555;
  /* overridden by body{} above, re-overridden to normal here */
}
.tt-suggestion {
  position: relative;
}
.suggestion-link {
  position: absolute; 
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  /*z-index: 1000000;*/
}
.empty-suggestions {
  margin: 3px 20px;
}
.input-group {
  margin: auto;
  vertical-align: middle;
  width: 100%;
}
.header {
  height: 100px;
  margin-bottom: 10px;
  display: inline-flex;
}
.homepage-title {
  padding: 5px;
  margin: auto;
}
.search-bar {
  margin: auto;
}
.category-heading {
  margin: 5px 20px;
  padding: 3px 0;
  border-bottom: 1px solid #ccc;
}



/* Index styles */

.listing-container {
  padding: 5px;
}
.capsule {
  padding: 0;
}
.stretchy {
  width: 100%;
  padding-bottom: calc((225/470)*100%);
  /* normal game image is 215*460, +10 each dimension for padding */
}
.stretchy .inner {
  position: absolute;
  top: 0; bottom: 0; left: 0; right: 0;
}
.game-img, .package-img {
  width: 100%;
  z-index: 1;
  padding: 5px;
}

.vertical-spacer {
  background-color: #202020;
  position: absolute;
  top: 0; left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
}
.stretchy .inner.package .vertical-spacer {
  background-clip: content-box;
  padding: 5px;
}
.vertical-spacer-text {
  color: rgba(255,255,255,0.5);
  text-align: center;
  position: absolute;
  width: 100%;
  height: calc((1 - (87*460)/(231*215)) * 100%);
  /* some math, since pkg img is 231*87 and normal img is 215*460 */
  padding-top: 1.5%;
  bottom: 0;
}
.package-link:hover,
.package-link:focus,
.package-link:active {
  text-decoration: none;
}



/* New Deals line styling */

.divider-container {
  margin-top: 40px;
  margin-bottom: 10px;
}
h3.divider {
  width: 100%;
  text-align: center;
  line-height: 0.1em;
  margin: 10px 0 20px;
} 
h3 span.divider {
  background: #373737;
  padding: 0 10px;
}



/* Game page styling */

/*.underlay {
  width: 900px;
  height: 10000px;
  margin: 0 auto;
  left: 225px;
  position: absolute;
  z-index: -1000;
  background-color: rgba(255,255,255,0.1);
}*/

.vital-data * {
  padding: 0;
  /*border: 1px solid red;*/
}
.main-column {
  width: 800px;
  margin: 0 auto;
}



.img-container {
  display: inline-block;
}
.info-container {
  display: inline-block;
  position: relative;
  width: 300px;
  height: 215px;
  float: right;
}
.score-container {
  margin: 0 15px;
  display: inline-block;
  width: 120px;
  height: 120px;
  line-height: 120px;
  white-space: nowrap;
}
.score-labels {
  width: 100%;
}
.score-labels .label {
  display: inline-block;
  width: 50%;
  text-align: center;
}
.recs-num {
  font-size: 24pt;
}
.recs-container {
  text-align: center;
  width: 100%;
  position: absolute;
  bottom: 0;
}
.recs-word {
  height: 10pt;
  line-height: 10pt;
}



.pics * {
  padding: 0;
}
.pics {
  margin-top: 40px;
}
.img-loading-overlay {
  width: 100%;
  text-align: center;
}
.pics .img-loading-overlay {
  height: 100%;
}
.pics .img-loading-overlay-inner {
  position: absolute;

  width: 300px;
  height: 24px;

  top: 50%;
  left: 50%;
  margin: -12px 0 0 -150px;
}

/*.pics a {
  padding: 3px;
  height: 150px;
}
.pics a:hover {
  background-color: white;
}*/

#horiz_container img {
  height: 150px;
  border-radius: 5px;
}
#horiz_container_outer {
  border-color: rgba(204,204,204,0.4);
  width: 100%;
  height: 170px; /* 150+10+10 */
}
#horiz_container_inner {
  margin: 0;
  padding: 0;
}
/* ... */

